<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sensor_fusion_launch</name>
  <version>0.0.0</version>
  <description>Launch files for various sensor fusion systems</description>
  <maintainer email="kolaseirik@gmail.com">Eirik Kolås</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>rclcpp</depend>

  <exec_depend>vortex_msgs</exec_depend>
  <exec_depend>ouster_ros</exec_depend>
  <exec_depend>pcl_detector</exec_depend>
  <exec_depend>target_tracking</exec_depend>


  <exec_depend>ros2launch</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
